# ascale

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  P216_toAny.h  PA16_toAny.h  README.md  a.cpp  a.h  conanfile.txt  define.h  pixelHeader.h  putbits.h  scaler1080.h  scaler1080_yuv.h  scaler1080_yuv422.h  scaler720_yuv420.h  uyvy8bit_toAny.h  v210_toAny.h  v210_to_10packing.h  yuv10packing_toAny.h
.github/workflows/: Build.yml  cmake.yml  cmake.yml-pause  msvc.yml  release.yml  static.yml
source/: P216_toAny.h  PA16_toAny.h  a.cpp  a.h  define.h  main_sdl.cpp  pixelHeader.h  putbits.h  scaler1080.h  scaler1080_yuv.h  scaler1080_yuv422.h  scaler720_yuv420.h  uyvy8bit_toAny.h  v210_toAny.h  yuv10packing_toAny.h
